# cryptohack

./: .gitmodules  README.md  pyproject.toml  writeup-diffie-hellman.md  writeup-elliptic-curves.md  writeup-general.md  writeup-mathematics.md  writeup-rsa.md
diffie_hellman/group-theory/: additive.py  static-client-2.py
diffie_hellman/man-in-the-middle/: export-grade.py  parameter-injection.py  static-client.py
diffie_hellman/misc/: script-kiddie.py
diffie_hellman/starter/: computing-public-values.py  computing-shared-secrets.py  deriving-symmetric-keys.py  generators-of-groups.py
elliptic_curves/: Montgomery.py  Point.py  background.md  curves_and_logs.py  digestive.py  efficient_exchange.py  elliptic_nodes.sage  exceptional_curves.sage  moving_problems.sage  point_addition.py  point_multiplication.py  point_negation.py  smooth_criminal.sage
general/data-formats/: solutions.md
general/encoding/: README.md  encoding.go  solutions.md
general/mathematics/: extended-gcd.go  gcd.go  solutions.md
general/xor/: 1-xor-starter.go  2-xor-properties.go  3-favourite-byte.go  4-know-xor.go  5-lemur-xor.go  README.md  favourite-byte.go  know-xor.go  lemur-xor.go  solutions.md  xor-properties.go  xor-starter.go
mathematics/brain-teasers-1/: 1-successive-powers.py  2-adriens-signs.py  3-modular-binomials.py  4-broken-rsa.py  5-no-way-back.py
mathematics/brain-teasers-2/: 1-ellipse-curve-cryptography.py  3-unencryptable.py  4-cofactor-cofantasy.py
mathematics/modular-math/: 1-quadratic-residues.go  2-legendre-symbol.py  3-modular-square-root.py  solutions.md  (+1 more)
(+22 files in other folders)
